--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
       <div class="col-md-6 col-sm-6 col-xs-12">
         <p class="text-muted">
           <small>
-            &copy; {{ site.time | date: "%Y" }} All rights... Waived? No wait... Reserved?
+            &copy; {{ site.time | date: "%Y" }}
           </small>
         </p>
       </div>
